fix dinghuo display error in firebrowser

--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/changedetail.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/changedetail.html
@@ -131,7 +131,7 @@
             <h2 class="head-title">详细列表</h2>
         </legend>
     </div>
-    <div class="row">
+    <div>
         <table id="orderdetailtable" border="1" class="table table-striped table-bordered table-hover">
             <thead>
             <th width="100px">商品编码</th>
