--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/dailystats.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/dailystats.html
@@ -63,7 +63,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div>
             <table id="mytable" class="table table-bordered" cellpadding="0">
                 <thead>
                 <th width="100px">大货单号</th>
