--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/layerdetail.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/layerdetail.html
@@ -14,8 +14,7 @@
 
 {% endblock %}
 {% block container %}
-    <div class="container">
-        <div class="row">
+        <div>
             <table id="orderdetailtable" border="1" class="table table-striped table-bordered table-hover">
                 <thead>
                 <td width="100px">商品名称</td>
@@ -39,7 +38,6 @@
                 </tbody>
             </table>
         </div>
-    </div>
 {% endblock %}
 {% block tail_script %}
     <script src="{{ STATIC_URL }}jquery/jquery-2.1.1.min.js"></script>
