--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/orderdetail.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/orderdetail.html
@@ -105,7 +105,7 @@
                 <h2 class="head-title">详细列表</h2>
             </legend>
         </div>
-        <div class="row">
+        <div>
             <table id="orderdetailtable" border="1" class="table table-striped table-bordered table-hover">
                 <thead>
                 <td width="100px">商品编码</td>
