--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/dailystats.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/dailystats.html
@@ -70,11 +70,11 @@
                 <th>
                     <div class="row">
                         <div width="100px" class="col-xs-2">图片</div>
-                        <div class="col-xs-6">名称</div>
+                        <div class="col-xs-4">名称</div>
                         <div class="col-xs-2">
                         <label class="ui-widget">数量:<span id="total_quantity_num"></span></label>
                         </div>
-                        <div class="col-xs-2">
+                        <div class="col-xs-4">
                             <label class="ui-widget">价格:<span id="total_amount_num"  ></span></label></div>
                     </div>
                 </th>
@@ -94,9 +94,9 @@
                                     <div class="row">
                                         <div class="col-xs-2"><img src="{{ orderdetail.pic_path }}" width="60px"
                                                                    height="60px" class="img-circle"></div>
-                                        <div class="col-xs-6 mytext">{{ orderdetail.product_name }}</div>
+                                        <div class="col-xs-4 mytext">{{ orderdetail.product_name }}</div>
                                         <div class="order_quantity col-xs-2 mytext">{{ orderdetail.quantity }}</div>
-                                        <div class="order_amount col-xs-2 mytext">{{ orderdetail.price }}</div>
+                                        <div class="order_amount col-xs-4 mytext">{{ orderdetail.price }}</div>
                                     </div>
                                 {% endfor %}
                             </div>
@@ -175,7 +175,7 @@
                 }
             }
 
-            $('#total_amount_num').html(total_amount_num.toString());
+            $('#total_amount_num').html(total_amount_num.toFixed(2).toString());
             $('#total_quantity_num').html(total_quantity_num.toString());
 
 
