--- a/shopmanager/flashsale/xiaolumm/templates/mama_cashout_verify.html
+++ b/shopmanager/flashsale/xiaolumm/templates/mama_cashout_verify.html
@@ -114,7 +114,7 @@
                         
                         <td>
                             <div class="btn-group" role="group" aria-label="...">
-                                <button type="button" {% if not cashout_flag %} style="display:none" {% endif %} class="btn btn-primary" onclick="shenhe({{ item.id }})" >通过</button>
+                                <button type="button"{% if not item.cashout_flag %} style="display:none"{% endif %} class="btn btn-primary" onclick="shenhe({{ item.id }})" >通过</button>
                                 <button type="button" class="btn btn-warning" onclick="jujue({{ item.id }})">拒绝</button>
                             </div>
                         </td>
