[xlmm][flashsale][dinghuo] change string

--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/changedetail.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/changedetail.html
@@ -159,7 +159,7 @@
             <div class="row" style="text-align: right">
                 <div class="col-lg-4"></div>
                 <div class="col-lg-4"></div>
-                <div class="col-lg-4"><input type="button" class="btn btn-danger" id="zuofeibutton" value="作废大货"
+                <div class="col-lg-4"><input type="button" class="btn btn-danger" id="zuofeibutton" value="作废"
                                              onclick="changestatus({{ orderlist.id }},this)"></div>
             </div>
         {% else %}
