fix xiaolumama cashout

--- a/shopmanager/flashsale/xiaolumm/templates/mama_cashout.html
+++ b/shopmanager/flashsale/xiaolumm/templates/mama_cashout.html
@@ -246,8 +246,16 @@
   $('#cashout-form').on('submit', function(e) {
         e.preventDefault(); // <-- important
         var cform = $(this);
+        var inputValue = $('#id-cashout-input')
+        var v_min = inputValue.attr('min') ;
+        var v_max = inputValue.attr('max') ;
+        var value = inputValue.val();
+
+        if (value < v_min || value > v_max){
+        	$("#id-submit-message")[0].innerHTML = "提现金额最低20元，且低于可提现金额！";
+        	return 
+        }
         var callback = function (res) {
-          console.log(res);
 	      if (res["code"] == 0) {
 	        $("#id-cashout-notice").css("display","block");
 	        $("#id-cashout-area").css("display","none");
