--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/addpurchasedetail.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/addpurchasedetail.html
@@ -27,6 +27,7 @@
                 <div class="row" style="margin-left: 80px">
                     <span class="label label-default" style="font-size: 20px">添加购买</span>
                 </div>
+
                 <form method="post" action="/sale/dinghuo/initdraft/">
                     <input type="text" name="product_counter" value="{{ productRestult|length }}" hidden="hidden">
                     {% for product in productRestult %}
@@ -45,8 +46,7 @@
                                     <th>数量</th>
                                     <th>买入价格</th>
                                     </thead>
-                                    {% for guige in productguige %}
-                                        {% if guige.product_id == product.id %}
+                                    {% for guige in product.prod_skus %}
                                             <tr>
                                                 <td>
                                                     <div>
@@ -55,7 +55,7 @@
                                                 </td>
                                                 <td>
                                                     <div>
-                                                        <input name="{{ guige.product_id }}_tb_quantity_{{ guige.id }}"
+                                                        <input name="{{ guige.product}}_tb_quantity_{{ guige.id }}"
                                                                type="number" value="{{ guige.wait_post_num }}" min="0"
                                                                class="quantity form-control"
                                                                onkeyup="this.value=this.value.replace(/\D/g,'')"
@@ -66,7 +66,7 @@
                                                 </td>
                                                 <td>
                                                     <div>
-                                                        <input name="{{ guige.product_id }}_tb_cost_{{ guige.id }}"
+                                                        <input name="{{ guige.product }}_tb_cost_{{ guige.id }}"
                                                                type="text" min="0" value="{{ guige.cost }}" class="mairucost form-control"
                                                                t_value=""
                                                                o_value=""
@@ -78,7 +78,6 @@
                                                     </div>
                                                 </td>
                                             </tr>
-                                        {% endif %}
                                     {% endfor %}
                                 </table>
                             </div>
