--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/dailystats.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/dailystats.html
@@ -33,7 +33,7 @@
             var data = {"orderid": id, "func": button.value};
             var callback = function (res) {
                 if (res == "OK") {
-                     window.location.reload();
+                    window.location.reload();
                 }
             };
             $.ajax({url: url, data: data, type: "post", success: callback});
@@ -43,82 +43,88 @@
 {% endblock %}
 {% block container %}
     <div class="container" style="margin-top: 40px">
-
-        <div class="row">
-            <div class="col-xs-8"><h3>小鹿美美每日订货报告</h3></div>
-            <div class="col-xs-4"><h3>负责人：肖阳</h3></div>
-        </div>
-
-        <hr>
-        <div class="row">
-            <div class="col-xs-4">
-                <a href="/sale/dinghuo/daily/?day={{ prev_day }}"><< 前一天</a>
+        <fieldset>
+            <legend>
+                <div class="row">
+                    <div class="col-xs-8"><h3>小鹿美美每日订货报告</h3></div>
+                    <div class="col-xs-4"><h3>负责人：肖阳</h3></div>
+                </div>
+            </legend>
+            <div class="row">
+                <div class="col-xs-4">
+                    <a href="/sale/dinghuo/daily/?day={{ prev_day }}"><< 前一天</a>
+                </div>
+                <div class="col-xs-4">
+                    <p><h4>{{ target_date }}</h4></p>
+                </div>
+                <div class="col-xs-4">
+                    {% if next_day %}
+                        <a href="/sale/dinghuo/daily/?day={{ next_day }}">后一天 >></a>
+                    {% endif %}
+                </div>
             </div>
-            <div class="col-xs-4">
-                <p><h4>{{ target_date }}</h4></p>
-            </div>
-            <div class="col-xs-4">
-                {% if next_day %}
-                    <a href="/sale/dinghuo/daily/?day={{ next_day }}">后一天 >></a>
-                {% endif %}
-            </div>
-        </div>
 
-        <div>
-            <table id="mytable" class="table table-bordered" cellpadding="0">
-                <thead>
-                <th width="100px">大货单号</th>
-                <th>
-                    <div class="row">
-                        <div width="100px" class="col-xs-2">图片</div>
-                        <div class="col-xs-4">名称</div>
-                        <div class="col-xs-2">
-                        <label class="ui-widget">数量:<span id="total_quantity_num"></span></label>
-                        </div>
-                        <div class="col-xs-4">
-                            <label class="ui-widget">价格:<span id="total_amount_num"  ></span></label></div>
-                    </div>
-                </th>
-                <th>负责人</th>
-                <th>操作</th>
-                </thead>
-                {% for orderlists_list in orderlists_lists %}
-
-                    <tr>
-                        <td>
-                            <label class="label label-warning" style="font-size: 20px">{{ orderlists_list.id }}</label>
-                            <label class="label label-info">{{ orderlists_list.status }}状态</label>
-                        </td>
-                        <td>
-                            <div class="container" style="width: 800px">
-                                {% for orderdetail in orderlists_list.orderdetail %}
-                                    <div class="row">
-                                        <div class="col-xs-2"><img src="{{ orderdetail.pic_path }}" width="60px"
-                                                                   height="60px" class="img-circle"></div>
-                                        <div class="col-xs-4 mytext">{{ orderdetail.product_name }}</div>
-                                        <div class="order_quantity col-xs-2 mytext">{{ orderdetail.quantity }}</div>
-                                        <div class="order_amount col-xs-4 mytext">{{ orderdetail.price }}</div>
-                                    </div>
-                                {% endfor %}
+            <div>
+                <table id="mytable" class="table table-bordered table-condensed">
+                    <thead style="background-color:#01B5A2;" id="id-head-control">
+                    <th width="100px">大货单号</th>
+                    <th>
+                        <div class="container" style="width: 830px">
+                            <div class="row">
+                                <div class="col-xs-2">图片</div>
+                                <div class="col-xs-4">名称</div>
+                                <div class="col-xs-2">
+                                    <label class="ui-widget">数量:<span id="total_quantity_num"></span></label>
+                                </div>
+                                <div class="col-xs-4">
+                                    <label class="ui-widget">价格:<span id="total_amount_num"></span></label></div>
                             </div>
-                        </td>
-                        <td>
-                            <div class="mytext">{{ orderlists_list.buyer_name }}/{{ orderlists_list.receiver }}</div>
-                        </td>
-                        <td width="100px">
-                            <a id="detaillayer" onclick="showlayer({{ orderlists_list.id }})" class="btn  btn-success"
-                               style="margin-top: 3px;font-size: 8px" title="查看详情"> 查看详情</a>
-                            {% if orderlists_list.statusflag %}
-                            <button onclick="changestatus({{ orderlists_list.id }},this)" class="btn btn-primary"
-                                    style="margin-top: 3px;font-size: 8px" id="shenhebutton" value="审核">改为审核
-                            </button>
-                            {% endif %}
-                        </td>
-                    </tr>
-                {% endfor %}
-            </table>
-        </div>
-
+                        </div>
+                    </th>
+                    <th width="100px">负责人</th>
+                    <th width="100px">操作</th>
+                    </thead>
+                    <tbody style="margin-top: 20px">
+                    {% for orderlists_list in orderlists_lists %}
+                        <tr>
+                            <td width="100px">
+                                <label class="label label-warning"
+                                       style="font-size: 20px">{{ orderlists_list.id }}</label>
+                                <label class="label label-info">{{ orderlists_list.status }}状态</label>
+                            </td>
+                            <td>
+                                <div class="container" style="width: 830px">
+                                    {% for orderdetail in orderlists_list.orderdetail %}
+                                        <div class="row">
+                                            <div class="col-xs-2"><img src="{{ orderdetail.pic_path }}" width="60px"
+                                                                       height="60px" class="img-circle"></div>
+                                            <div class="col-xs-4 mytext">{{ orderdetail.product_name }}</div>
+                                            <div class="order_quantity col-xs-2 mytext">{{ orderdetail.quantity }}</div>
+                                            <div class="order_amount col-xs-4 mytext">{{ orderdetail.price }}</div>
+                                        </div>
+                                    {% endfor %}
+                                </div>
+                            </td>
+                            <td width="100px">
+                                <div class="mytext">{{ orderlists_list.buyer_name }}<br>{{ orderlists_list.receiver }}</div>
+                            </td>
+                            <td width="100px">
+                                <a id="detaillayer" onclick="showlayer({{ orderlists_list.id }})"
+                                   class="btn  btn-success"
+                                   style="margin-top: 3px;font-size: 8px" title="查看详情"> 查看详情</a>
+                                {% if orderlists_list.statusflag %}
+                                    <button onclick="changestatus({{ orderlists_list.id }},this)"
+                                            class="btn btn-primary"
+                                            style="margin-top: 3px;font-size: 8px" id="shenhebutton" value="审核">改为审核
+                                    </button>
+                                {% endif %}
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </fieldset>
     </div>
 {% endblock %}
 
@@ -203,6 +209,16 @@
         });
         $(function () {
             Calc_stats_data();
+
+            $(window).scroll(function () {
+                var w_height = $(window).height();//浏览器高度
+                var scroll_top = $(document).scrollTop();//滚动条到顶部的垂直高度
+                if (scroll_top > 70) {
+                    $("#id-head-control").css("position", "fixed").css("top", "0").css("width", 1140).css("z-index",9999);
+                } else {
+                    $("#id-head-control").css("position", "static");
+                }
+            });
         });
     </script>
 {% endblock %}
